# privacyscope

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: protocol.yaml
config/rules/: banner_cookies.yaml  canal_titular.yaml  politica_privacidade.yaml
docs/: arquitetura.md  notas_de_refinamento.md  referencias.csv
protocols/: b4.yaml  b4_sample.csv  b7.yaml  b7_T1.yaml  b7_efetivas.csv  b7_gov_supp.yaml  b7_gov_supp_sample.csv  b7_recollect.yaml  b7_sample.csv  b8_subamostra.csv  example.yaml  prepilot.yaml
scripts/: compare_to_ground_truth.py  generate_ground_truth_template.py  sample_b4.py  sample_b7.py  sample_b7_gov_supp.py  smoke_c1_integrated.py  smoke_c2_integrated.py  smoke_fallback_chain.py  smoke_filesystem_repo.py  smoke_http_fetcher.py  smoke_playwright_fetcher.py  smoke_subpage_v03.py  smoke_tranco.py
scripts/docx/: build_rp_v1.py  build_rp_v2.py  build_rp_v3.py  build_rp_v4.py  build_rp_v5.py  build_rp_v6.py
src/privacyscope/: __init__.py  cli.py  orchestrator.py
src/privacyscope/core/: __init__.py  interfaces.py  plugin_registry.py  types.py
src/privacyscope/fetchers/: __init__.py  _exceptions.py  _signals.py  _subpage.py  fallback_chain.py  http_fetcher.py  playwright_fetcher.py
src/privacyscope/outputs/: __init__.py
src/privacyscope/sources/: __init__.py  tranco.py
src/privacyscope/storage/: __init__.py  filesystem_repo.py  manifest_audit.py  sqlite_store.py
src/privacyscope/tests/: __init__.py  _helpers.py  _lexicon.py  _vendor_signatures.py  banner_cookies.py  canal_titular.py  politica_privacidade.py
