[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privacyscope"
version = "0.1.0"
description = "Framework parametrizável para apoio à etapa de Monitoramento do processo fiscalizatório da ANPD, baseado em webscraping e machine learning."
authors = [
    {name = "Cristiano Gouveia Silverio", email = "cristiano.silverio@lgpd2u.com.br"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Natural Language :: Portuguese (Brazilian)",
]
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "playwright>=1.43",
    "tldextract>=5.1",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.7",
    "polars>=0.20",
    "pyarrow>=15.0",
    "scikit-learn>=1.4",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
    "ipykernel>=6.29",
]
ml-advanced = [
    "transformers>=4.40",
    "torch>=2.2",
    "sentencepiece>=0.2",
]

[project.urls]
Homepage = "https://github.com/cristianosilverio/privacyscope"
Repository = "https://github.com/cristianosilverio/privacyscope"
Issues = "https://github.com/cristianosilverio/privacyscope/issues"

[project.scripts]
privacyscope = "privacyscope.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
privacyscope = ["config/*.yaml", "config/rules/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests_unit"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
